--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <h1>testing here we gosso</h1>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="public/all.min.js"></script>
 </body>
 </html>
