hey cool things work and look better

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <h1>testing here we gosso</h1>
+<h1>Drink it in, man</h1>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="public/all.min.js"></script>
